--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
                 <img src="assets/img/logo.png" alt="Deer">
             </div>
             <!-- <h1 class="title">Deer</h1> -->
-            <p class="subtitle">𝓗𝓲 👋, 𝓘'𝓶 𝓓𝓮𝓮𝓻</p>
+            <p class="subtitle">𝓗𝓲 👋, 𝓘'𝓶 GWY</p>
             <div class="hitokoto">
                 <p class="hitokoto-text">哪有什么岁月静好，不过是有人在替你负重前行。</p>
                 <p class="hitokoto-from">- [网络]</p>
             </div>
             <nav class="navigation">
                 <a href="https://home.952780.xyz" class="nav-item" target="_blank">主页</a>
-                <a href="https://deerwan.github.io" class="nav-item" target="_blank">博客</a>
+                <a href="https://blog.521778.xyz" class="nav-item" target="_blank">博客</a>
                 <a href="#guestbook" class="nav-item">留言</a>
                 <a href="#about" class="nav-item">关于</a>
             </nav>
             <!--
             <div class="social-links">
-                <a href="https://github.com/deerwan" target="_blank" title="GitHub">
+                <a href="https://github.com/GWY13" target="_blank" title="GitHub">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://deerwan.github.io" target="_blank" title="Blog">
+                <a href="https://blog.521778.xyz" target="_blank" title="Blog">
                     <i class="fas fa-blog"></i>
                 </a>
                 <a href="https://www.zhihu.com" target="_blank" title="知乎">
