--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
                     <div class="skill-tags">
                         <span class="skill-tag">HTML/CSS</span>
                         <span class="skill-tag">JavaScript</span>
-                        <span class="skill-tag">React</span>
-                        <span class="skill-tag">Node.js</span>
+                        <span class="skill-tag">Java</span>
                         <span class="skill-tag">Python</span>
                     </div>
                     
                     <h3>兴趣爱好</h3>
-                    <p>编程、阅读、摄影、旅行</p>
+                    <p>编程、阅读、游戏</p>
                 </div>
             </div>
             
@@ -134,12 +133,12 @@
     <script src="assets/js/main.js"></script>
     <footer class="footer">
         <div class="footer-content">
-            <p>Deer &copy; 2025</p>
+            <p>GWY &copy; 2025</p>
             <div class="footer-links">
-                <a href="https://github.com/deerwan" target="_blank">
+                <a href="https://github.com/GWY13" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://deerwan.github.io" target="_blank">
+                <a href="https://blog.521778.xyz" target="_blank">
                     <i class="fas fa-blog"></i>
                 </a>
                 <a href="mailto:your@email.com">
