--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GWY - Home</title>
-    <link rel="shortcut icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" href="assets/img/202408051749788.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -52,7 +52,7 @@
             <h2 class="section-title">关于我</h2>
             <div class="about-content">
                 <div class="about-avatar">
-                    <img src="assets/img/logo.png" alt="个人头像">
+                    <img src="assets/img/202408051749788.png" alt="个人头像">
                 </div>
                 <div class="about-info">
                     <h3>个人简介</h3>
