--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="content">
             <div class="logo">
-                <img src="assets/img/logo.png" alt="Deer">
+                <img src="assets/img/202408051749788.png" alt="Deer">
             </div>
             <!-- <h1 class="title">Deer</h1> -->
             <p class="subtitle">𝓗𝓲 👋, 𝓘'𝓶 GWY</p>
