--- a/index.html
+++ b/index.html
@@ -1,551 +1,78 @@
-@font-face {
-    font-family: '975MaruSC';
-    src: url('../fonts/975MaruSC-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: '975MaruSC';
-    src: url('../fonts/975MaruSC-Medium.ttf') format('truetype');
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: '975MaruSC';
-    src: url('../fonts/975MaruSC-Bold.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    background-color: #2d3436;
-    font-family: '975MaruSC', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    transition: background-image 1s ease-in-out;
-    position: relative;
-    overflow: hidden;
-}
-
-body::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.3);
-    z-index: 1;
-}
-
-.container {
-    position: relative;
-    z-index: 2;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-.content {
-    text-align: center;
-    color: white;
-    padding: 2rem;
-    border-radius: 10px;
-    animation: fadeIn 1s ease-in;
-    max-width: 800px;
-    width: 90%;
-    margin: 0 auto;
-}
-
-.logo img {
-    width: 120px;
-    height: 120px;
-    margin-bottom: 1rem;
-    animation: fadeIn 1s ease-in;
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-.title {
-    font-family: '975MaruSC', serif;
-    font-size: clamp(2rem, 5vw, 3rem);
-    margin: 0.5rem 0;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    letter-spacing: 2px;
-}
-
-.subtitle {
-    font-size: clamp(1rem, 3vw, 1.2rem);
-    margin-bottom: 2rem;
-    opacity: 0.9;
-    letter-spacing: 3px;
-}
-
-.navigation {
-    margin: 2rem 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-}
-
-.nav-item {
-    color: white;
-    text-decoration: none;
-    padding: 0.5rem 1.5rem;
-    font-size: clamp(0.9rem, 2vw, 1rem);
-    transition: all 0.3s ease;
-    position: relative; /* 为下划线定位 */
-}
-
-/* 淡白色下划线 */
-.nav-item::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 10%;
-    width: 80%;
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.3); /* 淡白色 */
-    transition: all 0.3s ease;
-}
-
-/* 鼠标悬停：动态渐变色文字，下划线变亮 */
-.navigation .nav-item:hover {
-    background-image: var(--gradient, linear-gradient(to right, #00ff7f, #00b7eb));
-    background-size: 200% 200%;
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    animation: gradientFlow 3s ease infinite;
-}
-
-.navigation .nav-item:hover::after {
-    background-color: rgba(255, 255, 255, 0.6); /* 悬停时下划线变亮 */
-    height: 2px; /* 稍加粗 */
-}
-
-/* 动态渐变动画 */
-@keyframes gradientFlow {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
-}
-
-/* 渐变色定义 */
-.navigation .nav-item.gradient-1 { /* 主页 */
-    --gradient: linear-gradient(to right, #00ff7f, #00b7eb, #00ff7f); /* 亮绿到亮蓝 */
-}
-
-.navigation .nav-item.gradient-2 { /* 博客 */
-    --gradient: linear-gradient(to right, #ff4040, #ffa500, #ff4040); /* 亮红到橙 */
-}
-
-.navigation .nav-item.gradient-3 { /* 图床 */
-    --gradient: linear-gradient(to right, #9932cc, #ff69b4, #9932cc); /* 紫到粉 */
-}
-
-.navigation .nav-item.gradient-4 { /* 关于 */
-    --gradient: linear-gradient(to right, #20c997, #ffd700, #20c997); /* 青到黄 */
-}
-
-.navigation .nav-item.gradient-5 { /* 未来按钮 1（例如项目） */
-    --gradient: linear-gradient(to right, #1e90ff, #ff4500, #1e90ff); /* 蓝到红 */
-}
-
-.navigation .nav-item.gradient-6 { /* 未来按钮 2（例如联系） */
-    --gradient: linear-gradient(to right, #ff69b4, #32cd32, #ff69b4); /* 粉到绿 */
-}
-
-.hitokoto {
-    margin: 2rem auto;
-    font-style: normal;
-    opacity: 0.9;
-    max-width: 600px;
-    padding: 0 1rem;
-}
-
-.hitokoto-text {
-    font-size: clamp(1rem, 2.5vw, 1.2rem);
-    margin-bottom: 0.5rem;
-    line-height: 1.8;
-}
-
-.social-links {
-    margin-top: 2rem;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-}
-
-/* 媒体查询 */
-@media screen and (max-width: 768px) {
-    .content {
-        padding: 1.5rem;
-    }
-
-    .logo img {
-        width: 100px;
-        height: 100px;
-    }
-
-    .navigation {
-        flex-direction: column;
-        align-items: center;
-        gap: 0.8rem;
-    }
-
-    .nav-item {
-        width: 80%;
-        text-align: center;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .content {
-        padding: 1rem;
-    }
-
-    .logo img {
-        width: 80px;
-        height: 80px;
-    }
-
-    .social-links {
-        gap: 1rem;
-    }
-
-    .social-links a {
-        font-size: 1.2rem;
-    }
-}
-
-.avatar img {
-    width: 130px;
-    height: 130px;
-    border-radius: 50%;
-    margin-bottom: 1rem;
-    border: 3px solid rgba(255, 255, 255, 0.8);
-    transition: transform 0.3s ease;
-}
-
-.avatar img:hover {
-    transform: scale(1.1);
-}
-
-.name {
-    font-size: 2rem;
-    margin: 1rem 0;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-.bio {
-    font-size: 1.2rem;
-    margin-bottom: 1rem;
-    opacity: 0.9;
-}
-
-.hitokoto-from {
-    font-size: 0.9rem;
-    opacity: 0.8;
-}
-
-.social-links {
-    margin-top: 2rem;
-}
-
-.social-links a {
-    color: white;
-    text-decoration: none;
-    margin: 0 1rem;
-    font-size: 1.5rem;
-    transition: all 0.3s ease;
-}
-
-.social-links a:hover {
-    color: #ddd;
-    transform: translateY(-3px);
-}
-
-@keyframes fadeIn {
-    from { 
-        opacity: 0; 
-        transform: translateY(20px); 
-    }
-    to { 
-        opacity: 1; 
-        transform: translateY(0); 
-    }
-}
-
-/* 关于页面样式 */
-.section {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    backdrop-filter: blur(10px);
-    z-index: 100;
-    overflow-y: auto;
-    padding: 2rem 0;
-}
-
-.section:target {
-    display: block;
-    animation: fadeIn 0.5s ease-in-out;
-}
-
-/* 返回按钮样式 */
-.back-btn {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    color: white;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    font-size: 1rem;
-    transition: all 0.3s ease;
-    background-color: rgba(255, 255, 255, 0.1);
-    padding: 8px 15px;
-    border-radius: 20px;
-}
-
-.back-btn:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    transform: translateX(-3px);
-}
-
-/* 确保about-container有相对定位 */
-.about-container {
-    position: relative;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 2rem;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-}
-
-.section-title {
-    text-align: center;
-    margin-bottom: 2rem;
-    font-size: 2rem;
-    position: relative;
-    padding-bottom: 0.5rem;
-}
-
-.section-title:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 50px;
-    height: 2px;
-    background-color: white;
-}
-
-.about-content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    margin-bottom: 2rem;
-}
-
-.about-avatar {
-    flex: 0 0 150px;
-}
-
-.about-avatar img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 3px solid rgba(255, 255, 255, 0.5);
-}
-
-.about-info {
-    flex: 1;
-    min-width: 300px;
-}
-
-.about-info h3 {
-    margin: 1rem 0 0.5rem;
-    font-size: 1.3rem;
-}
-
-.skill-tags {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0.5rem;
-    margin: 1rem 0;
-}
-
-.skill-tag {
-    background-color: rgba(255, 255, 255, 0.2);
-    padding: 0.3rem 0.8rem;
-    border-radius: 20px;
-    font-size: 0.9rem;
-    transition: all 0.3s ease;
-}
-
-.skill-tag:hover {
-    background-color: rgba(255, 255, 255, 0.3);
-    transform: translateY(-2px);
-}
-
-.contact-form {
-    margin-top: 2rem;
-}
-
-.form-group {
-    margin-bottom: 1rem;
-}
-
-.form-group input,
-.form-group textarea {
-    width: 100%;
-    padding: 0.8rem;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 5px;
-    color: white;
-    font-family: inherit;
-    transition: all 0.3s ease;
-}
-
-.form-group input:focus,
-.form-group textarea:focus {
-    outline: none;
-    background-color: rgba(255, 255, 255, 0.15);
-    border-color: rgba(255, 255, 255, 0.4);
-}
-
-.submit-btn {
-    background-color: rgba(255, 255, 255, 0.2);
-    color: white;
-    border: none;
-    padding: 0.8rem 2rem;
-    border-radius: 5px;
-    cursor: pointer;
-    font-family: inherit;
-    transition: all 0.3s ease;
-}
-
-.submit-btn:hover {
-    background-color: rgba(255, 255, 255, 0.3);
-}
-
-/* 留言板样式 */
-.guestbook-intro {
-    margin-bottom: 2rem;
-    text-align: center;
-}
-
-.guestbook-form {
-    margin-bottom: 3rem;
-}
-
-.message-list {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-}
-
-.message-item {
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 8px;
-    padding: 1rem;
-    transition: all 0.3s ease;
-}
-
-.message-item:hover {
-    background-color: rgba(255, 255, 255, 0.15);
-}
-
-.message-header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0.5rem;
-    font-size: 0.9rem;
-    color: rgba(255, 255, 255, 0.8);
-}
-
-.message-author {
-    font-weight: bold;
-}
-
-.message-content p {
-    margin: 0;
-    line-height: 1.6;
-}
-
-/* 响应式调整 */
-@media screen and (max-width: 768px) {
-    .message-header {
-        flex-direction: column;
-        gap: 0.3rem;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .about-content {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-    
-    .about-avatar {
-        margin-bottom: 1rem;
-    }
-}
-
-.footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 1rem;
-    text-align: center;
-    color: white;
-    z-index: 10;
-}
-
-.footer-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-}
-
-.footer-links {
-    display: flex;
-    gap: 1rem;
-}
-
-.footer-links a {
-    color: white;
-    text-decoration: none;
-    transition: opacity 0.3s ease;
-}
-
-.footer-links a:hover {
-    opacity: 0.8;
-}
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GWY - Home</title>
+    <link rel="shortcut icon" href="assets/img/202408051749788.png">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+    <div class="container">
+        <div class="content">
+            <div class="logo">
+                <img src="https://cftc.521778.xyz/assets/img/202408051749788.png" alt="Deer">
+            </div>
+            <p class="subtitle">𝓗𝓲 👋, 𝓘'𝓶 GWY</p>
+            <div class="hitokoto">
+                <p class="hitokoto-text">哪有什么岁月静好，不过是有人在替你负重前行。</p>
+                <p class="hitokoto-from">- [网络]</p>
+            </div>
+            <nav class="navigation">
+                <a href="https://home.521778.xyz" class="nav-item" target="_blank">主页</a>
+                <a href="https://blog.521778.xyz" class="nav-item" target="_blank">博客</a>
+                <a href="https://cftc.521778.xyz" class="nav-item" target="_blank">图床</a>
+                <a href="#about" class="nav-item">关于</a>
+            </nav>
+        </div>
+    </div>
+
+    <!-- 关于页面 -->
+    <div id="about" class="section">
+        <div class="about-container">
+            <a href="#" class="back-btn"><i class="fas fa-arrow-left"></i> 返回</a>
+            <h2 class="section-title">关于我</h2>
+            <div class="about-content">
+                <div class="about-avatar">
+                    <img src="https://cftc.521778.xyz/assets/img/202408051749788.png" alt="个人头像">
+                </div>
+                <div class="about-info">
+                    <h3>个人简介</h3>
+                    <p>欢迎来到我的个人主页！我是一名热爱编程和技术的开发者，喜欢探索新技术和分享知识。</p>
+
+                    <h3>技能标签</h3>
+                    <div class="skill-tags">
+                        <span class="skill-tag">HTML/CSS</span>
+                        <span class="skill-tag">JavaScript</span>
+                        <span class="skill-tag">Java</span>
+                        <span class="skill-tag">Python</span>
+                    </div>
+
+                    <h3>兴趣爱好</h3>
+                    <p>编程、阅读、游戏</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="lib/jquery.min.js"></script>
+    <script src="assets/js/main.js"></script>
+    <footer class="footer">
+        <div class="footer-content">
+            <p>GWY &copy; 2025</p>
+            <div class="footer-links">
+                <a href="https://github.com/GWY13" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://blog.521778.xyz" target="_blank">
+                    <i class="fas fa-blog"></i>
+                </a>
+                <a href="mailto:your@email.com">
+                    <i class="fas fa-envelope"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
