--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="content">
             <div class="logo">
-                <img src="https://cftc.521778.xyz/assets/img/202408051749788.png" alt="Deer">
+                <img src="assets/img/202408051749788.png" alt="GWY">
             </div>
             <p class="subtitle">𝓗𝓲 👋, 𝓘'𝓶 GWY</p>
             <div class="hitokoto">
