--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2 class="section-title">关于我</h2>
             <div class="about-content">
                 <div class="about-avatar">
-                    <img src="https://cftc.521778.xyz/assets/img/202408051749788.png" alt="个人头像">
+                    <img src="assets/img/202408051749788.png" alt="个人头像">
                 </div>
                 <div class="about-info">
                     <h3>个人简介</h3>
